--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,14 @@
-vendor/
+.DS_Store
 node_modules/
-npm-debug.log
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-storage/*.key
-.env.*.php
-.env.php
-.env
-Homestead.yaml
-Homestead.json
-
-# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
-.rocketeer/
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
